--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="support/toolkit110-comp110.jar"/>
+	<classpathentry kind="lib" path="support/gson-2.5.jar"/>
+	<classpathentry kind="lib" path="support/jsoup-1.8.3.jar"/>
 	<classpathentry kind="lib" path="support/toolkit110-15.jar"/>
 	<classpathentry kind="lib" path="support/toolkit110-13.jar"/>
 	<classpathentry kind="lib" path="support/toolkit110-12.jar"/>
